# rust-os

./: CPUID.asm  README.md  bootloader.asm  gdt_64.asm  linker.ld  makefile  paging.asm  print.asm  readDisk.asm  secondStage.asm
kernel/: Cargo.toml  target.json
kernel/src/: PIC8259.rs  idt.rs  io_ports.rs  isr_handlers.rs  lib.rs  serial.rs  temp.rs
