[package]
name = "rust-os"
version = "0.1.0"
authors = ["Lukasz Pancer"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true